Upgrade java, Sedona and 3. party dependencies